lib/generated_bindings.dart


  late final _OgaGeneratorParamsTryGraphCaptureWithMaxBatchSizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaGeneratorParams>,
              ffi.Int32)>>('OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize');
  late final _OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize =
      _OgaGeneratorParamsTryGraphCaptureWithMaxBatchSizePtr.asFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>, int)>();

  ffi.Pointer<OgaResult> OgaGeneratorParamsSetInputIDs(
    ffi.Pointer<OgaGeneratorParams> generator_params,
    ffi.Pointer<ffi.Int32> input_ids,
    int input_ids_count,
    int sequence_length,
    int batch_size,
  ) {
    return _OgaGeneratorParamsSetInputIDs(
      generator_params,
      input_ids,
      input_ids_count,
      sequence_length,
      batch_size,
    );
  }

  late final _OgaGeneratorParamsSetInputIDsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Int32>,
              ffi.Size,
              ffi.Size,
              ffi.Size)>>('OgaGeneratorParamsSetInputIDs');
  late final _OgaGeneratorParamsSetInputIDs =
      _OgaGeneratorParamsSetInputIDsPtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Int32>, int, int, int)>();

  ffi.Pointer<OgaResult> OgaGeneratorParamsSetInputSequences(
    ffi.Pointer<OgaGeneratorParams> generator_params,
    ffi.Pointer<OgaSequences> sequences,
  ) {
    return _OgaGeneratorParamsSetInputSequences(
      generator_params,
      sequences,
    );
  }

  late final _OgaGeneratorParamsSetInputSequencesPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<OgaResult> Function(
                  ffi.Pointer<OgaGeneratorParams>, ffi.Pointer<OgaSequences>)>>(
      'OgaGeneratorParamsSetInputSequences');
  late final _OgaGeneratorParamsSetInputSequences =
      _OgaGeneratorParamsSetInputSequencesPtr.asFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>, ffi.Pointer<OgaSequences>)>();

  ffi.Pointer<OgaResult> OgaGeneratorParamsSetInputs(
    ffi.Pointer<OgaGeneratorParams> generator_params,
    ffi.Pointer<OgaNamedTensors> named_tensors,
  ) {
    return _OgaGeneratorParamsSetInputs(
      generator_params,
      named_tensors,
    );
  }

  late final _OgaGeneratorParamsSetInputsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<OgaNamedTensors>)>>('OgaGeneratorParamsSetInputs');
  late final _OgaGeneratorParamsSetInputs =
      _OgaGeneratorParamsSetInputsPtr.asFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>, ffi.Pointer<OgaNamedTensors>)>();

  ffi.Pointer<OgaResult> OgaGeneratorParamsSetModelInput(
    ffi.Pointer<OgaGeneratorParams> generator_params,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<OgaTensor> tensor,
  ) {
    return _OgaGeneratorParamsSetModelInput(
      generator_params,
      name,
      tensor,
    );
  }

  late final _OgaGeneratorParamsSetModelInputPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<OgaTensor>)>>('OgaGeneratorParamsSetModelInput');
  late final _OgaGeneratorParamsSetModelInput =
      _OgaGeneratorParamsSetModelInputPtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<OgaTensor>)>();

  ffi.Pointer<OgaResult> OgaGeneratorParamsSetWhisperInputFeatures(
    ffi.Pointer<OgaGeneratorParams> arg0,
    ffi.Pointer<OgaTensor> tensor,
  ) {
    return _OgaGeneratorParamsSetWhisperInputFeatures(
      arg0,
      tensor,
    );
  }

  late final _OgaGeneratorParamsSetWhisperInputFeaturesPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<OgaResult> Function(
                  ffi.Pointer<OgaGeneratorParams>, ffi.Pointer<OgaTensor>)>>(
      'OgaGeneratorParamsSetWhisperInputFeatures');
  late final _OgaGeneratorParamsSetWhisperInputFeatures =
      _OgaGeneratorParamsSetWhisperInputFeaturesPtr.asFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>, ffi.Pointer<OgaTensor>)>();

  ffi.Pointer<OgaResult> OgaCreateGenerator(
    ffi.Pointer<OgaModel> model,
    ffi.Pointer<OgaGeneratorParams> params,
    ffi.Pointer<ffi.Pointer<OgaGenerator>> out,
  ) {
    return _OgaCreateGenerator(
      model,
      params,
      out,
    );
  }

  late final _OgaCreateGeneratorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaModel>,
              ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Pointer<OgaGenerator>>)>>('OgaCreateGenerator');
  late final _OgaCreateGenerator = _OgaCreateGeneratorPtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<OgaModel>,
          ffi.Pointer<OgaGeneratorParams>,
          ffi.Pointer<ffi.Pointer<OgaGenerator>>)>();

  void OgaDestroyGenerator(
    ffi.Pointer<OgaGenerator> generator,
  ) {
    return _OgaDestroyGenerator(
      generator,
    );
  }

  late final _OgaDestroyGeneratorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OgaGenerator>)>>(
          'OgaDestroyGenerator');
  late final _OgaDestroyGenerator = _OgaDestroyGeneratorPtr.asFunction<
      void Function(ffi.Pointer<OgaGenerator>)>();

  bool OgaGenerator_IsDone(
    ffi.Pointer<OgaGenerator> generator,
  ) {
    return _OgaGenerator_IsDone(
      generator,
    );
  }

  late final _OgaGenerator_IsDonePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<OgaGenerator>)>>(
          'OgaGenerator_IsDone');
  late final _OgaGenerator_IsDone = _OgaGenerator_IsDonePtr.asFunction<
      bool Function(ffi.Pointer<OgaGenerator>)>();

  ffi.Pointer<OgaResult> OgaGenerator_ComputeLogits(
    ffi.Pointer<OgaGenerator> generator,
  ) {
    return _OgaGenerator_ComputeLogits(
      generator,
    );
  }

  late final _OgaGenerator_ComputeLogitsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGenerator>)>>('OgaGenerator_ComputeLogits');
  late final _OgaGenerator_ComputeLogits = _OgaGenerator_ComputeLogitsPtr
      .asFunction<ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaGenerator>)>();

  ffi.Pointer<OgaResult> OgaGenerator_GenerateNextToken(
    ffi.Pointer<OgaGenerator> generator,
  ) {
    return _OgaGenerator_GenerateNextToken(
      generator,
    );
  }

  late final _OgaGenerator_GenerateNextTokenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGenerator>)>>('OgaGenerator_GenerateNextToken');
  late final _OgaGenerator_GenerateNextToken =
      _OgaGenerator_GenerateNextTokenPtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaGenerator>)>();

  int OgaGenerator_GetSequenceCount(
    ffi.Pointer<OgaGenerator> generator,
    int index,
  ) {
    return _OgaGenerator_GetSequenceCount(
      generator,
      index,
    );
  }

  late final _OgaGenerator_GetSequenceCountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<OgaGenerator>,
              ffi.Size)>>('OgaGenerator_GetSequenceCount');
  late final _OgaGenerator_GetSequenceCount = _OgaGenerator_GetSequenceCountPtr
      .asFunction<int Function(ffi.Pointer<OgaGenerator>, int)>();

  ffi.Pointer<ffi.Int32> OgaGenerator_GetSequenceData(
    ffi.Pointer<OgaGenerator> generator,
    int index,
  ) {
    return _OgaGenerator_GetSequenceData(
      generator,
      index,
    );
  }

  late final _OgaGenerator_GetSequenceDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int32> Function(ffi.Pointer<OgaGenerator>,
              ffi.Size)>>('OgaGenerator_GetSequenceData');
  late final _OgaGenerator_GetSequenceData =
      _OgaGenerator_GetSequenceDataPtr.asFunction<
          ffi.Pointer<ffi.Int32> Function(ffi.Pointer<OgaGenerator>, int)>();

  ffi.Pointer<OgaResult> OgaCreateTokenizer(
    ffi.Pointer<OgaModel> model,
    ffi.Pointer<ffi.Pointer<OgaTokenizer>> out,
  ) {
    return _OgaCreateTokenizer(
      model,
      out,
    );
  }

  late final _OgaCreateTokenizerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaModel>,
              ffi.Pointer<ffi.Pointer<OgaTokenizer>>)>>('OgaCreateTokenizer');
  late final _OgaCreateTokenizer = _OgaCreateTokenizerPtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<OgaModel>, ffi.Pointer<ffi.Pointer<OgaTokenizer>>)>();

  void OgaDestroyTokenizer(
    ffi.Pointer<OgaTokenizer> arg0,
  ) {
    return _OgaDestroyTokenizer(
      arg0,
    );
  }

  late final _OgaDestroyTokenizerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OgaTokenizer>)>>(
          'OgaDestroyTokenizer');
  late final _OgaDestroyTokenizer = _OgaDestroyTokenizerPtr.asFunction<
      void Function(ffi.Pointer<OgaTokenizer>)>();

  ffi.Pointer<OgaResult> OgaCreateMultiModalProcessor(
    ffi.Pointer<OgaModel> model,
    ffi.Pointer<ffi.Pointer<OgaMultiModalProcessor>> out,
  ) {
    return _OgaCreateMultiModalProcessor(
      model,
      out,
    );
  }

  late final _OgaCreateMultiModalProcessorPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaModel>,
                  ffi.Pointer<ffi.Pointer<OgaMultiModalProcessor>>)>>(
      'OgaCreateMultiModalProcessor');
  late final _OgaCreateMultiModalProcessor =
      _OgaCreateMultiModalProcessorPtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaModel>,
              ffi.Pointer<ffi.Pointer<OgaMultiModalProcessor>>)>();

  void OgaDestroyMultiModalProcessor(
    ffi.Pointer<OgaMultiModalProcessor> processor,
  ) {
    return _OgaDestroyMultiModalProcessor(
      processor,
    );
  }

  late final _OgaDestroyMultiModalProcessorPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<OgaMultiModalProcessor>)>>(
      'OgaDestroyMultiModalProcessor');
  late final _OgaDestroyMultiModalProcessor = _OgaDestroyMultiModalProcessorPtr
      .asFunction<void Function(ffi.Pointer<OgaMultiModalProcessor>)>();

  ffi.Pointer<OgaResult> OgaTokenizerEncode(
    ffi.Pointer<OgaTokenizer> arg0,
    ffi.Pointer<ffi.Char> str,
    ffi.Pointer<OgaSequences> sequences,
  ) {
    return _OgaTokenizerEncode(
      arg0,
      str,
      sequences,
    );
  }

  late final _OgaTokenizerEncodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaTokenizer>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<OgaSequences>)>>('OgaTokenizerEncode');
  late final _OgaTokenizerEncode = _OgaTokenizerEncodePtr.asFunction<
      ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaTokenizer>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<OgaSequences>)>();

  ffi.Pointer<OgaResult> OgaProcessorProcessImages(
    ffi.Pointer<OgaMultiModalProcessor> arg0,
    ffi.Pointer<ffi.Char> prompt,
    ffi.Pointer<OgaImages> images,
    ffi.Pointer<ffi.Pointer<OgaNamedTensors>> input_tensors,
  ) {
    return _OgaProcessorProcessImages(
      arg0,
      prompt,
      images,
      input_tensors,
    );
  }
